<resources>
    <string name="app_name">FitLife</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_number_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in">Sign in</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="textregister_user"> wants to register</string>
    <string name="fitlife">Welcome to FitLife</string>
    <string name="User_Found_Login">User Found Login</string>
    <string name="user_not_login">User not Login</string>
    <string name="name_is_required">name is Required</string>
    <string name="password_isrequired">Password is required</string>
    <string name="name_is_Required">Name is required</string>
    <string name="email_is_required">Email is required</string>
    <string name="provide_valid_email">Please Provide Valid Email</string>
    <string name="password_req">Password is required</string>
    <string name="confrim_pass_req">Confirm password is required</string>
    <string name="user_register_successfully">User Register Successfully</string>
    <string name="user_not_Reg">User not registered</string>
    <string name="password_must_6_charct">Password must be 6 character and Should match with confirm password</string>
    <string name="Shoulder">Shoulder</string>
    <string name="Back">Back</string>
    <string name="Biceps">Biceps</string>
    <string name="Legs">Legs</string>
    <string name="Triceps">Triceps</string>
    <string name="Chest">Chest</string>
    <string name="exercise_aaded_ssuc">Exercise Added Successfully to Database !</string>
    <string name="exercise_not_aaded">Exercise Not Added Please Try Again!</string>
    <string name="Over_Head_Press">Over Head Press</string>
    <string name="Over_Head_Press_desc">Stand with your body upright and core muscles braced, looking straight ahead. Hold the bar on your upper chest, gripping it with hands just wider than shoulder-width apart. Press the bar directly overhead. Dont tilt your hips forward during the move.</string>
    <string name="Shoulder_Press">Shoulder Press</string>
    <string name="Shoulder_Press_desc">Sit on an upright bench holding a dumbbell in each hand at shoulder height with your palms facing away from you. Keep your chest up and your core braced, and look straight forward throughout the move. Press the weights directly upwards until your arms are straight and the weights touch above your head. Slowly lower the weights back to the start position under control, pause, then start the next rep. Bouncing back up from the bottom position places greater strain on your shoulders and means you’re using momentum to move the weights instead of your muscles."</string>
    <string name="Side_Latera_Raise">Side Lateral Raise</string>
    <string name="Side_Latera_Raise_desc">"The side lateral raise is an effective shoulder-strengthening movement designed to isolate the lateral head of the deltoid muscle. Performed regularly, this can help you develop stronger, broader shoulders. All you need is a pair of light dumbbells and enough shoulder flexibility to abduct your arms (lifting the weights out and away from your body) until they form a \"T\" shape at your shoulders."</string>
    <string name="Bent_">Bent Over Ball Bell Row</string>
    <string name="Bent_Desc">Stand holding a barbell with your palms facing up. Bend your knees slightly and lean forward by bending at the waist. Keeping your back straight, and elbows close to your body, row the barbell towards your chest, squeezing your back muscles. Slowly lower to the starting position.</string>
    <string name="Lat_Pull">Lat Pull Down</string>
    <string name="Lat_Pull_desc">Initiate the downward movement by simultaneously pulling your shoulder blades down and pulling your elbows towards your body. Continue to pull your shoulder blades toward your spine as you squeeze your upper back and lat muscles until the lat bar reaches your collar bones. Pause at the bottom of the movement.</string>
    <string name="One_Arm">One Arm Dumbel</string>
    <string name="One_Arm_desc">Once you’re comfortable with the standard one-arm dumbbell row, you can progress the exercise by standing square-on to the bench. Instead of supporting yourself with your leg and hand on the bench, you’ll only have one hand on it while you row with the other. " +This increases the challenge to your core, because you’ll have to work harder against the weight to hold your torso in place while you row it up and down.\n" +Stand with your feet shoulder-width apart and hinge at the hips to lean over the bench on one hand, pushing your bum back and keeping your back straight. Row the weight up,making sure that only your arm – not your torso – moves during the exercise.</string>
    <string name="Concetration">Concetration Curl</string>
    <string name="Concetration_Desc">Slowly curl the weight up, only moving your forearms – the position of your upper arm on your thigh will help you keep it still during the exercise. At the top of the move, pause for a beat and squeeze your biceps, then slowly lower the weight back to the start. Do all your reps on one arm, then switch to the other."</string>
    <string name="Ezbar">Ezbar Reverse Curl</string>
    <string name="Ezbar_Desc">Hold a pair of dumbbells or EZ-curl bar with a pronated grip (palms facing away from your body and toward the floor). Flex your biceps, bend your elbows, and lift the dumbbells towards your shoulders. Continue this movement for your desired number of repetitions."</string>
    <string name="Hammer">Hammer Curl</string>
    <string name="Hammer_desc">"Bend at the elbow, lifting the lower arms to pull the weights toward the shoulders. Your upper arms are stationary and the wrists are in line with the forearms. Hold for one second at the top of the movement. Your thumbs will be close to the shoulders and palms facing in, toward the midline of the body.\n" +Lower the weights to return to the starting position."</string>
    <string name="Barbell">Barbell Squat</string>
    <string name="Barbell_desc">A barbell squat, also known as a barbell back squat, is a compound exercise that activates muscle groups throughout your lower body, including your hamstrings, glutes, and lower back muscles. Perform barbell squats by standing with your feet shoulder-width apart. Take a deep breath and unrack a weighted barbell, holding it on your upper back. Keep your chest up and your back straight as you hinge your hips and knees to lower your body through a full range of motion into a squat position."</string>
    <string name="Leg_Extension">Leg Extension</string>
    <string name="Leg_Extension_Desc">You sit on a padded seat and raise a padded bar with your legs. The exercise works mainly the quadriceps muscles of the front of the thigh—the rectus femoris and the vastus muscles. You can use this exercise to build lower body strength and muscle definition as part of a strength training workout.</string>
    <string name="Leg_Press_">Leg Press</string>
    <string name="Leg_Press_desc">The leg press, a type of resistance training exercise, is an excellent way to strengthen your legs. Its done by pushing your legs against weights on a leg press machine. Like all strength training exercises, leg presses build muscle, reduce the risk of injury, and counteract age-related muscle loss."</string>
    <string name="Push_">Push Down</string>
    <string name="Push_desc">A tricep pushdown is an isolation exercise designed to target your triceps muscles. Perform tricep pushdowns by standing in front of a pulley machine with your feet shoulder-width apart. Grab hold of the cable attachment on the pulley machine. This attachment can be fitted with a rope, a straight bar, or a V-bar.</string>
    <string name="Skull">Skull Crusher</string>
    <string name="Skull_Desc">A skull crusher, also known as a lying triceps extension, is an isolation exercise focused on your triceps muscles. Skull crushers are performed by lying on your back on a flat bench and lifting dumbbells from behind your head to full extension above you. With proper form, this strength training exercise can be more than just a triceps exercise—it can also work muscle groups like the deltoids in your shoulders and the latissimus dorsi muscle in your back. Some skull crusher variations substitute dumbbells for a barbell or a pair of kettlebells.</string>
    <string name="Triceps_Dps">Triceps Dips</string>
    <string name="Triceps_Dps_Desc">Bench dips are a bodyweight exercise designed to activate muscles in your arms, shoulders, and chest. They are also known as triceps dips. Perform bench dips by sitting on a bench or elevated surface with your lower body extended to the floor in front of you.</string>
    <string name="Bench_Press">Bench Press</string>
    <string name="Bench_Press_Desc"> "Lie back on a flat bench holding a barbell in the rack above you with a shoulder-width, overhand grip.\n" +Drive your feet into the floor to contract your quads and glutes, and clamp back your shoulder blades to shorten the weights path of travel. This increases neural drive to your chest, delts and triceps.From the starting position, breathe in and lower the bar slowly until it skims the middle of your chest.Focus your mind on activating your chest muscles and push the bar back to the starting position explosively as you breathe out. That’s one rep."</string>
    <string name="Cable">Cable Cross Over</string>
    <string name="Cable_Desc">Stand in the centre of the machine with feet shoulder-width apart. Bend your torso forwards slightly, keeping your spine neutral and back straight, and bend your elbows slightly as well, with your wrists facing the floor. Keeping your core engaged, pull both handles down and across your body.</string>
    <string name="umble_Fly">Dumble Fly</string>
    <string name="umble_Fl_desc">Stand in the centre of the machine with feet shoulder-width apart. Bend your torso forwards slightly, keeping your spine neutral and back straight, and bend your elbows slightly as well, with your wrists facing the floor. Keeping your core engaged, pull both handles down and across your body.</string>
    <string name="exercise">Exercise</string>
    <string name="categories">Categories</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="sets">Sets</string>
    <string name="date">Date</string>
    <string name="weight">Weight</string>
    <string name="repetition">Repetition</string>
    <string name="dismiss">Dismiss</string>
    <string name="add">Add</string>
    <string name="please_select_how_much_sets_and_weight_you_will_do_for_it">Please select How much sets and weight you will do for it ?</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="confirm_your_password">Confirm Your password</string>
    <string name="register">Register</string>
    <string name="no_exercise_information">No Exercise Added yet! Please go to categories and add your exercises.</string>
    <string name="logout_question">Do you want to logout?</string>



</resources>