<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:padding="10dp"
    android:orientation="vertical">
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_question"
        android:textColor="@color/white"
        android:textSize="21sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:backgroundTint="@color/red"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:text="@string/no"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_height="wrap_content"/>

    </LinearLayout>



</androidx.appcompat.widget.LinearLayoutCompat>